--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "news-api",
+    "name": "ts-template-project",
     "version": "1.0.0",
     "description": "",
-    "main": "webpack.base.config.js",
+    "private": "true",
     "scripts": {
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
         "build": "webpack --config ./webpack.config.js --env mode=prod",
@@ -13,7 +13,7 @@
         "url": ""
     },
     "keywords": [],
-    "author": "Aleh Serhiyenia",
+    "author": "Siarhei Muliarenka",
     "license": "ISC",
     "homepage": "",
     "devDependencies": {
@@ -29,16 +29,16 @@
         "eslint-plugin-import": "^2.23.3",
         "eslint-plugin-prettier": "^3.4.0",
         "html-webpack-plugin": "^5.2.0",
-    "mini-css-extract-plugin": "^2.7.5",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.2.2",
-    "sass-resources-loader": "^2.2.5", 
+        "mini-css-extract-plugin": "^2.7.5",
         "prettier": "2.2.1",
+        "sass": "^1.62.1",
+        "sass-loader": "^13.2.2",
+        "sass-resources-loader": "^2.2.5",
         "ts-loader": "^9.4.3",
         "typescript": "^5.1.3",
         "webpack": "^5.37.1",
         "webpack-cli": "^4.5.0",
-        "webpack-dev-server": "^3.11.2",
+        "webpack-dev-server": "^4.15.1",
         "webpack-merge": "^5.7.3"
     },
     "config": {
