--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
         "build": "webpack --config ./webpack.config.js --env mode=prod",
-        "lint": "eslint . --ext .ts"
+        "lint": "eslint . --ext .ts",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -39,7 +40,14 @@
         "webpack": "^5.37.1",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^4.15.1",
-        "webpack-merge": "^5.7.3"
+        "webpack-merge": "^5.7.3",
+        "@babel/core": "^7.22.5",
+        "@babel/preset-env": "^7.22.5",
+        "@babel/preset-typescript": "^7.22.5",
+        "@types/jest": "^29.5.2",
+        "babel-jest": "^29.5.0",
+        "jest": "^29.5.0",
+        "ts-jest": "^29.1.0"
     },
     "config": {
         "commitizen": {
