--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "license": "ISC",
     "homepage": "",
     "devDependencies": {
+        "@babel/core": "^7.22.5",
+        "@babel/preset-env": "^7.22.5",
+        "@babel/preset-typescript": "^7.22.5",
+        "@types/jest": "^29.5.2",
         "@typescript-eslint/eslint-plugin": "^5.59.9",
         "@typescript-eslint/parser": "^5.59.9",
+        "babel-jest": "^29.5.0",
         "clean-webpack-plugin": "^3.0.0",
         "commitizen": "^4.3.0",
         "copy-webpack-plugin": "^7.0.0",
@@ -30,24 +35,20 @@
         "eslint-plugin-import": "^2.23.3",
         "eslint-plugin-prettier": "^3.4.0",
         "html-webpack-plugin": "^5.2.0",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
         "mini-css-extract-plugin": "^2.7.5",
         "prettier": "2.2.1",
         "sass": "^1.62.1",
         "sass-loader": "^13.2.2",
         "sass-resources-loader": "^2.2.5",
+        "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.3",
         "typescript": "^5.1.3",
         "webpack": "^5.37.1",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^4.15.1",
-        "webpack-merge": "^5.7.3",
-        "@babel/core": "^7.22.5",
-        "@babel/preset-env": "^7.22.5",
-        "@babel/preset-typescript": "^7.22.5",
-        "@types/jest": "^29.5.2",
-        "babel-jest": "^29.5.0",
-        "jest": "^29.5.0",
-        "ts-jest": "^29.1.0"
+        "webpack-merge": "^5.7.3"
     },
     "config": {
         "commitizen": {
